@@ -1,0 +1,4 @@
+function phpads_deliverActiveX(content)
+{
+	document.write(content);	
+}
